--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<%= yield %>
+  <h1>Just a title<h1>
+  <br />
+  <br />
+  <%= yield %>
+  <br />
+  <br />
+  <h1>Some credits</h1>
 </body>
 </html>
