--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,9 +3,9 @@
 <table>
   <thead>
     <tr>
-      <th>ZNameX</th>
-      <th>ZEmailX</th>
-      <th>ZActiveX</th>
+      <th>!ZNameX</th>
+      <th>!ZEmailX</th>
+      <th>!ZActiveX</th>
       <th colspan="3"></th>
     </tr>
   </thead>
