--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,11 @@
-<h1>Lista de usuariosXXXXX/h1>
+<h1>Listing users</h1>
 
 <table>
   <thead>
     <tr>
-      <th>!ZNameX</th>
-      <th>!ZEmailX</th>
-      <th>!ZActiveX</th>
+      <th>Name</th>
+      <th>Email</th>
+      <th>Active</th>
       <th colspan="3"></th>
     </tr>
   </thead>
