--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,5 @@
-<h1>!!!!!!!!!!!!New user!!!!!!!!!!!!</h1>
+<h1>New user</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', users_path %>
-
-<h1> :) :) :) :) </h1>
