This is my new feature

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-	Just a test
+  <h1>Adding a header title</h1>
   <br />
   <%= yield %>
+  <br />
+  <br />
+  <h2>These are some credits</h2>
 </body>
 </html>
