--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,9 +3,9 @@
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Email</th>
-      <th>Active</th>
+      <th>Name :) </th>
+      <th>Email :) </th>
+      <th>Active :) </th>
       <th colspan="3"></th>
     </tr>
   </thead>
