MyTestBranch: Just a test

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<%= yield %>
+  <h1>List of new users</h1>
+  <br />
+  <br />
+  <%= yield %>
+  <br />
+  <br />
+  <h2> Here are the credits!!!!! </h2>
+  <br />
+  :) :) :) :) :) :) :) :) :) :) :) :)
 </body>
 </html>
