MyBadTest: Removed schema.rb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>This is my test app</title>
+  <title>This is my test app and it is not working :(</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -15,6 +15,6 @@
   <br />
   <h2> Here are the credits!!!!! </h2>
   <br />
-  :) :) :) :) :) :) :) :) :) :) :) :)
+ :( :( :( :( :( :( :( :( :( :( :( :( 
 </body>
 </html>
